# QuantStockForecast

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
configs/: ops_notifications.example.json  stock_universe_large_cap.txt  stock_universe_large_cap_50.txt  stock_universe_us_large_cap_30.txt
data_module/: README.md  __init__.py
data_module/cleaning/: README.md
data_module/common/: README.md  __init__.py  stock_schema.py
data_module/crawlers/: README.md
data_module/features/: README.md
data_module/fetchers/: README.md  SKILL.md  __init__.py
docs/: README.md  aligned_pipeline.md  daily_multi_expert_summary_2026-03-22.md  experiment_test_report.md  quickstart.md  us_a_share_multi_expert_report.md  us_zeroshot_experiment_report.md
docs/architecture/: overview.md
docs/development_logs/: README.md  daily_multi_expert_summary_2026-03-22.md
docs/experiments/: README.md  multi_expert_validation.md  us_a_share_multi_expert_report.md
docs/modules/: data_module.md  execution.md  model_prediction.md  risk_management.md
docs/operations/: windows-scheduler.md
docs/project/: README.md  architecture_overview.md  full_validation_2026-03-22.md  paper_trading_daily_manual.md  peer_comparison_backtest_setting.md  strict_strategy_run_2026-03-22.md  test_report_2026-03-22_strict_peer_comparison.md  (+2 more)
execution/: README.md  __init__.py
model_prediction/: README.md
other_codex_reviewer/: us_a_share_multi_expert_review.md  us_zeroshot_experiment_review.md  us_zeroshot_experiment_review_v2.md
risk_management/: README.md
tests/: conftest.py
(+211 files in other folders)
